--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -27,9 +27,8 @@ Pelane Phakgadi, [http://ewn.co.za/2017/12/24/ramaphosa-meets-aggrieved-khoisan-
 Dacht wördt dat de vöärolden van de hüdige khoisan 150.000 jår terügge al når südelik Afrika tröäken, meskeen wal vöär 260.000 jår<ref>Schlebusch, Carina M. Malmström, Helena. Günther, Torsten. Sjödin, Per. Coutinho, Alexandra. Edlund, Hanna. Munters, Arielle R. Vicent, Mário. Steyn, Maryna. Soodyall, Himla. Lombard, Marlize. Jakobsson, Mattias. "Southern African ancient genomes estimate modern human divergence to 350,000 to 260,000 years ago. Science, 3 november 2017. Vol 358, Is. 6363. p 652 – 655.</ref>, so dat by den anvang van de [[MIS 5]], de "[[megadrought]]", 130.000 jår terügge, der twey vöäroldergrupen warren: draegers van [[Haplogroup L0 (mtDNA)|mt-DNA haplogrup L0]] in südelik Afrika, de vöärolders van de Khoi-San en draegers van [[Macro-haplogroup L (mtDNA)|haplogrup L1-6]] in midden- en oustelik afrika, de vöärolders van de rest van alle lüde.
 
 Döärdat se so vroo al uutbreidden en uut mekander güngen, warren de Khoisan tüsken 150.000 en 70.000 jår eleaden de längste tyd up de moderne menskelike tydlyne de gröätste grup mensken, töt dat se vanaf dee tyd so händig an [[Eurasie]] intröäken.<ref>[http://www.nature.com/ncomms/2014/141204/ncomms6692/full/ncomms6692.html 
-Kim, Hie Lim, et al. "Khoisan hunter-gatherers have been the largest population throughout most of modern-human demographic history." [[Nature Communications]], 4 December 2014. Vol. 5. p 5692.]</ref> Se warren vöäle wydverbreider as nu. Öär terügloup in antallen hevt vöäral te maken med de [[Bantu-trek]].
+Kim, Hie Lim, et al. "Khoisan hunter-gatherers have been the largest population throughout most of modern-human demographic history." [[Nature Communications]], 4 December 2014. Vol. 5. p 5692.]</ref> Se warren vöäle wydverbreider as nu. Öär terügloup in antallen hevt vöäral te maken med de [[Bantu-trek]]. Se woaneden verspreid oaver südelik en süüdoustelik Afrika. Ouk was der ne anmarkelike terügtrek van L0-draegers når oustelik Afrika tüsken 120.000 en 75.000 jår terügge. Rito et al. (2013) meynt dat dårdöär meskeen wal de groute uuttocht uut Afrika van 70.000 jår terügge up gang köäm.<ref>Rito, Teresa. Et al. "The First Modern Human Dispersals across Africa". PLoS ONE, 13 November 2013. vol. 8, is. 11. Blz e80031</ref>
 
-They were much more widespread than today, their modern distribution being due to their decimation in the course of the [[Bantu expansion]]. They were dispersed throughout much of Southern and South-Eastern Africa. There was also a significant back-migration of bearers of L0 towards eastern Africa between 120 and 75 kya. Rito et al. (2013) speculate that pressure from such back-migration may even have contributed to the dispersal of East African populations out of Africa at about 70 kya.<ref name=Rito2013>{{cite journal |last1=Rito |first1=Teresa |last2=Richards |first2=Martin B. |last3=Fernandes |first3=Verónica |last4=Alshamali |first4=Farida |last5=Cerny |first5=Viktor |last6=Pereira |first6=Luísa |last7=Soares |first7=Pedro |last8=Gilbert |first8=Tom |title=The First Modern Human Dispersals across Africa |journal=PLoS ONE |date=13 November 2013 |volume=8 |issue=11 |pages=e80031 |doi=10.1371/journal.pone.0080031 |pmid=24236171 |pmc=3827445 }}</ref>
 "By ~130 ka two distinct groups of anatomically modern humans co-existed in Africa: broadly, the ancestors of many modern-day Khoe and San populations in the south and a second central/eastern African group that includes the ancestors of most extant worldwide populations. Early modern human dispersals correlate with climate changes, particularly the tropical African “megadroughts” of MIS 5 (marine isotope stage 5, 135–75 ka) which paradoxically may have facilitated expansions in central and eastern Africa, ultimately triggering the dispersal out of Africa of people carrying haplogroup L3 ~60 ka. Two south to east migrations are discernible within haplogroup L0. One, between 120 and 75 ka, represents the first unambiguous long-range modern human dispersal detected by mtDNA and might have allowed the dispersal of several markers of modernity. A second one, within the last 20 ka signalled by L0d, may have been responsible for the spread of southern click-consonant languages to eastern Africa, contrary to the view that these eastern examples constitute relics of an ancient, much wider distribution."
 
 {{anchor|Capoid}}
