--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -24,7 +24,7 @@ Pelane Phakgadi, [http://ewn.co.za/2017/12/24/ramaphosa-meets-aggrieved-khoisan-
 ==Geskydenisse==
 [[File:InitialExpansionMitogenome.PNG|thumb|upright|Skatte oorsprunglike gebeed van de [[haplogrup]]en L0d and L0k in südelik Afrika, dateerd up 90.000 jår terügge döär Behar et al. (2008).<ref>Behar, Doron M. Villems, Richard. Soodyall, Himla. Blue-Smith, Jason. Pereira, Luisa. Metspalu, Ene. Scozzari, Rosaria. Makkan, Heeran. Tzur, Shay. Comas, David. Bertranpetit, Jaume. Quintana-Murci, Lluis. Tyler-Smith, Chris. Wells, R. Spencer. Rosset, Saharon. "The Dawn of Human Matrilineal Diversity." The American Journal of Human Genetics, mei 2008. Vol 82 Is 5. p 1130–1140. Beide de boumfylogeny en coalescentybereakeningen geavt an dat Khoisan-afstamming langs de moderlyne sik 90.000 – 150.000 jår eleaden afspleyt van de rest van de menskelike mtDNA-grup.</ref>]]
 
-Dacht wördt dat de vöärolden van de hüdige khoisan 150.000 jår terügge al når südelik Afrika tröäken, meskeen wal vöär 260.000 jår<ref>Schlebusch, Carina M. Malmström, Helena. Günther, Torsten. Sjödin, Per. Coutinho, Alexandra. Edlund, Hanna. Munters, Arielle R. Vicent, Mário. Steyn, Maryna. Soodyall, Himla. Lombard, Marlize. Jakobsson, Mattias. "Southern African ancient genomes estimate modern human divergence to 350,000 to 260,000 years ago. Science, 3 november 2017. Vol 358, Is. 6363. p 652 – 655.</ref>, so dat by den anvang van de [[MIS 5]], de "[[megadrought]]", 130.000 jår terügge, der twey vöäroldergrupen warren: draegers van [[Haplogroup L0 (mtDNA)|mt-DNA haplogrup L0]] in südelik Afrika, de vöärolders van de Khoi-San en draegers van [[Macro-haplogroup L (mtDNA)|haplogrup L1-6]] in midden- en oustelik afrika, de vöärolders van de rest van alle lüde.
+Dacht wördt dat de vöärolden van de hüdige khoisan 150.000 jår terügge al når südelik Afrika tröäken, meskeen wal vöär 260.000 jår<ref>Schlebusch, Carina M. Malmström, Helena. Günther, Torsten. Sjödin, Per. Coutinho, Alexandra. Edlund, Hanna. Munters, Arielle R. Vicent, Mário. Steyn, Maryna. Soodyall, Himla. Lombard, Marlize. Jakobsson, Mattias. "Southern African ancient genomes estimate modern human divergence to 350,000 to 260,000 years ago. Science, 3 november 2017. Vol 358, Is. 6363. p 652 – 655.</ref>, so dat by den anvang van de [[MIS 5]], de "[[megadrought]]", 130.000 jår terügge, der twey vöäroldergrupen warren: draegers van [[Haplogroup L0 (mtDNA)|mt-DNA haplogrup L0]] in südelik Afrika (de vöärolders van de Khoi-San) en draegers van [[Macro-haplogroup L (mtDNA)|haplogrup L1-6]] in midden- en oustelik afrika (de vöärolders van de rest van alle lüde).
 
 Döärdat se so vroo al uutbreidden en uut mekander güngen, warren de Khoisan tüsken 150.000 en 70.000 jår eleaden de längste tyd up de moderne menskelike tydlyne de gröätste grup mensken, töt dat se vanaf dee tyd so händig an [[Eurasie]] intröäken.<ref>[http://www.nature.com/ncomms/2014/141204/ncomms6692/full/ncomms6692.html 
 Kim, Hie Lim, et al. "Khoisan hunter-gatherers have been the largest population throughout most of modern-human demographic history." [[Nature Communications]], 4 December 2014. Vol. 5. p 5692.]</ref> Se warren vöäle wydverbreider as nu. Öär terügloup in antallen hevt vöäral te maken med de [[Bantu-trek]]. Se woaneden verspreid oaver südelik en süüdoustelik Afrika. Ouk was der ne anmarkelike terügtrek van L0-draegers når oustelik Afrika tüsken 120.000 en 75.000 jår terügge. Rito et al. (2013) meynt dat dårdöär meskeen wal de groute uuttocht uut Afrika van 70.000 jår terügge up gang köäm.<ref>Rito, Teresa. Et al. "The First Modern Human Dispersals across Africa". PLoS ONE, 13 November 2013. vol. 8, is. 11. Blz e80031</ref>
