--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -27,15 +27,14 @@ Pelane Phakgadi, [http://ewn.co.za/2017/12/24/ramaphosa-meets-aggrieved-khoisan-
 Dacht wördt dat de vöärolden van de hüdige khoisan 150.000 jår terügge al når südelik Afrika tröäken, meskeen wal vöär 260.000 jår<ref>Schlebusch, Carina M. Malmström, Helena. Günther, Torsten. Sjödin, Per. Coutinho, Alexandra. Edlund, Hanna. Munters, Arielle R. Vicent, Mário. Steyn, Maryna. Soodyall, Himla. Lombard, Marlize. Jakobsson, Mattias. "Southern African ancient genomes estimate modern human divergence to 350,000 to 260,000 years ago. Science, 3 november 2017. Vol 358, Is. 6363. p 652 – 655.</ref>, so dat by den anvang van de [[MIS 5]], de "[[megadrought]]", 130.000 jår terügge, der twey vöäroldergrupen warren: draegers van [[Haplogroup L0 (mtDNA)|mt-DNA haplogrup L0]] in südelik Afrika (de vöärolders van de Khoi-San) en draegers van [[Macro-haplogroup L (mtDNA)|haplogrup L1-6]] in midden- en oustelik afrika (de vöärolders van de rest van alle lüde).
 
 Döärdat se so vroo al uutbreidden en uut mekander güngen, warren de Khoisan tüsken 150.000 en 70.000 jår eleaden de längste tyd up de moderne menskelike tydlyne de gröätste grup mensken, töt dat se vanaf dee tyd so händig an [[Eurasie]] intröäken.<ref>[http://www.nature.com/ncomms/2014/141204/ncomms6692/full/ncomms6692.html 
-Kim, Hie Lim, et al. "Khoisan hunter-gatherers have been the largest population throughout most of modern-human demographic history." [[Nature Communications]], 4 December 2014. Vol. 5. p 5692.]</ref> Se warren vöäle wydverbreider as nu. Öär terügloup in antallen hevt vöäral te maken med de [[Bantu-trek]]. Se woaneden verspreid oaver südelik en süüdoustelik Afrika. Ouk was der ne anmarkelike terügtrek van L0-draegers når oustelik Afrika tüsken 120.000 en 75.000 jår terügge. Rito et al. (2013) meynt dat dårdöär meskeen wal de groute uuttocht uut Afrika van 70.000 jår terügge up gang köäm.<ref>Rito, Teresa. Et al. "The First Modern Human Dispersals across Africa". PLoS ONE, 13 November 2013. vol. 8, is. 11. Blz e80031</ref>
+Kim, Hie Lim, et al. "Khoisan hunter-gatherers have been the largest population throughout most of modern-human demographic history." [[Nature Communications]], 4 December 2014. Vol. 5. p 5692.]</ref> Se warren vöäle wydverbreider as nu. Öär terügloup in antallen hevt vöäral te maken med de [[Bantu-trek]]. Se woaneden verspreid oaver südelik en süüdoustelik Afrika. Ouk was der ne anmarkelike terügtrek van L0-draegers når oustelik Afrika tüsken 120.000 en 75.000 jår terügge. Rito et al. (2013) meynt dat dårdöär meskeen wal de groute uuttocht uut Afrika van 70.000 jår terügge up gang köäm.<ref>Rito, Teresa. Et al. "The First Modern Human Dispersals across Africa". PLoS ONE, 13 November 2013. vol. 8, is. 11. Blz e80031.</ref>
 
-"By ~130 ka two distinct groups of anatomically modern humans co-existed in Africa: broadly, the ancestors of many modern-day Khoe and San populations in the south and a second central/eastern African group that includes the ancestors of most extant worldwide populations. Early modern human dispersals correlate with climate changes, particularly the tropical African “megadroughts” of MIS 5 (marine isotope stage 5, 135–75 ka) which paradoxically may have facilitated expansions in central and eastern Africa, ultimately triggering the dispersal out of Africa of people carrying haplogroup L3 ~60 ka. Two south to east migrations are discernible within haplogroup L0. One, between 120 and 75 ka, represents the first unambiguous long-range modern human dispersal detected by mtDNA and might have allowed the dispersal of several markers of modernity. A second one, within the last 20 ka signalled by L0d, may have been responsible for the spread of southern click-consonant languages to eastern Africa, contrary to the view that these eastern examples constitute relics of an ancient, much wider distribution."
+"teagen 130.000 jår eleaden leavden twey verskillende grupen moderne mensken nöäst mekander in Afrika: breyd enöämen de hüdige Khoe- en San-volker in et süden en ne tweyde meyr midden-oustelik afrikaanske grup, dee de vöärolders sint van de meyste andere volker up de wearld. Vroge moderne verspreiding van de menske kümt oavereyne med klimaatveranderingen, med name de tropiske afrikaanske 'megadröygtes' van MIS 5 (marine-isotoop nivo 5, 130k-75k jår terügge. Tegenstrydig genog kan dat sorgd hebben vöär verspreiding når Midden- en Oustafrika en de dårupvolgende uuttocht uut Afrika van lüde med haplogrup L3, ungeveyr 60.000 jår terügge. Binnen haplogrup L0 sint twey süüd-når-oustmigratys te seen. Den eyrsten tüsken 120 en 75 dusend jår terügge löt de eyrste langeafstandsmigraty van mensen seen langs mtDNA en kan de verspreiding van verskillende kenmarken van de moderne menske in gang hebben esat. Ne tweyde, binnen de lätste 20 dusend jår vöär Ld, kan sorgd hebben vöär de spreid van klikspråken in Oustafrika, in teagenstelling töt de eyrdere oavertüging dat de oustelike vöärbealden oaverblyvsels sint van ne öldere, breydere verspreiding."
 
-{{anchor|Capoid}}
-[[File:Carleton Coon races after Pleistocene.PNG|thumb|upright=1.2| {{legend0|#ff00ff|}} Approximate distribution of [[Middle Stone Age]] Capoids at the end of the Pleistocene (12,000 years ago) shown in magenta (according to   [[Carleton S. Coon|C. S. Coon]] 1963).]]
+[[File:Carleton Coon races after Pleistocene.PNG|thumb|upright=1.2| Skatte verspreiding van Kaapoiden in de middelste Steyntyd teagen et ende van et Pleistoceen (12.000 jår terügge) weadergeaven in roudpaersk (volgens [[Carleton S. Coon]] 1963).]]
 
-The term ''Capoid'' was introduced as a racial category uniting the Khoikhoi and San peoples as separate from other sub-Saharan populations was proposed by [[Carleton S. Coon]] (1962). It is  named for the [[Cape of Good Hope]].<ref name="ReferenceA">''[[The Origin of Races]]'' (1962).
-Moore, Ruth ''Evolution'' (Life Nature Library) New York:1962 Time, Inc. Chapter 8: "The Emergence of Modern ''Homo sapiens''" Page 173--First page of picture section "Man and His Genes": The ''Capoid'' race is identified as one of the five major races of mankind, along with the ''[[Mongoloid race|Mongoloid]]'', ''[[Congoid]]'', ''[[Caucasoid race|Caucasoid]]'', and ''[[Australoid]]'' races (pictures of a person typical of each race are shown)</ref> Coon (1962) proposed that the term "[[Negroid]]" should be abandoned, and the sub-Saharan African populations of West African stock (including the [[Bantu people|Bantu]]) should be termed "[[Congoid]]" instead.<ref name="ReferenceA"/> Cavalli-Sforza at al. (1994) used the term ''Khoisanid'' instead of Coon's "Capoid".<ref>[[Luigi Luca Cavalli-Sforza|Cavalli-Sforza, L. Luca]]; Menozzi, Paolo; and Piazza Alberto ''The History and Geography of Human Genes'' Princeton, New Jersey: 1994 Princeton University Press "Khoisanids" pp. 174–177</ref> The observation of a significant difference between  the Khoisan and the populations of [[Congoid|West African]] stock was not original to Coon, it had been noted as early as 1684 [[François Bernier]], the early modern author who originally introduced the French word ''race'' to refer to the large divisions of mankind. Bernier outside of five large divisions described in more detail proposes the  possible addition of more categories, primarily for  "the Blacks of the Cape of Good Hope" (''les Noirs du Cap de bonne Esperance''), which seemed to him to be of significantly different build from most other populations below the Sahara.<ref>Anonymous [F. Bernier], [http://gallica.bnf.fr/ark:/12148/bpt6k56535g/f135.item "Nouvelle division de la terre par les différentes espèces ou races qui l'habitent"], ''Journal des Sçavants'', 24 April 1684, [[:File:Nouvelle division de la terre, par les différentes espèces ou races d'homme qui l'habitent.png|p. 133]]&ndash;140. '' les  Noirs du Cap de bonne Esperance semblent estre d'une autre espece que ceux du reste de l'Afrique. '' (p. 136). See also Charles Frankel, ''La science face au racisme'' (1986), [https://books.google.ch/books?id=szfsLo3VSVAC&pg=PA41  41f.]</ref>
+[[Carleton S. Coon]] (1962) köäm med de term ''Kaapoide'' (når [[Kaap de Gode Hoape]]) as rasnaam, wårmed de Khoikhoi en San lös van andere subsaharavolker indeyld wörden.<ref>''[[The Origin of Races]]'' (1962).
+Moore, Ruth ''Evolution'' (Life Nature Library) New York:1962 Time, Inc. Höyvdstük 8: "The Emergence of Modern ''Homo sapiens''" blz. 173-- Eyrste bladsyde van afbealdingendeyl "Man and His Genes": et ''Kaapoide'' ras wördt eyne van de vyv groute menskenrassen nöömd, nöäst et ''[[Mongoloide ras|Mongoloide]]'', ''[[Kongoide]]'', ''[[Caucasisk]]'' en ''[[Australisk]]'' (med afbealdingen van een 'typisk persoon' vöär yder ras)</ref> Coon (1962) wul de term ''Negroide'' afskaffen en de lüde van under de [[Sahara]] uut [[Westafrika]] musten Kongoide nöömd worden. Cavalli-Sforza et al (1994) köämen med de naam ''khoisanide''.<ref>Cavalli-Sforza, L. Luca; Menozzi, Paolo; and Piazza Alberto. ''The History and Geography of Human Genes''. Princeton, New Jersey: 1994. Princeton University Press "Khoisanids" bls. 174–177.</ref> Coon was nit den eyrsten den as upmarkeden dat de Khoisan der anders uutsaggen as de westafrikaansen. Al in [[1684]] markeden [[François Bernier]] et up. Buten de vyv eyrder nöömde rassen stelden hee vöär üm noch meyr indeylingen up te neamen, vöäral vöär de "Swarten van Kaap van Gode Hoape" (''Les Noirs du Cap de bonne Esperance''). Hee vünd dat dee upmarkelik anders ebouwd warren as andere grupen under de Sahara.<ref>Anonymous [F. Bernier], [http://gallica.bnf.fr/ark:/12148/bpt6k56535g/f135.item "Nouvelle division de la terre par les différentes espèces ou races qui l'habitent"], ''Journal des Sçavants'', 24 April 1684, [[:File:Nouvelle division de la terre, par les différentes espèces ou races d'homme qui l'habitent.png|p. 133]]&ndash;140. '' les  Noirs du Cap de bonne Esperance semblent estre d'une autre espece que ceux du reste de l'Afrique. '' (p. 136). Seet ouk Charles Frankel, ''La science face au racisme'' (1986), [https://books.google.ch/books?id=szfsLo3VSVAC&pg=PA41  41f.]</ref>
 
 ==Språken==
 
