*Empty MediaWiki Message*

--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -2,7 +2,7 @@
 
 Med name de Khoekhoen warren eyrder bekend as ''hottentotten'', ne [[onomatopee]] uut et neaderlandske ''hot-en-tot'' vöär de [[klikkonsonanten|klikgelüden]] dee in de Khoekhoespråken vöärkoamet. By öäre vroge kolonisaty van de Kaap gavven de neaderlanders de Khoekhoen drank üm se uut te lokken nen rituelen dans up te voren. De tekst by de dans klüng vöär neaderlanders as "hot-en-tot".
 
-Van de Sān wördt vake dacht dat se jager-sammelders sint in de [[kalahariwöyste]] en deylen van [[Botswana]], [[Namibie]], [[Angola]], [[Zambia]], [[Zimbabwe]], [[Lesotho]] en [[Süüdafrika]]. Et woord ''sān'' kümt uut et Khoekhoe en bedüdet enkel sammelders ("dee wat saken van de grund upkryget") dee gin vey holdet. So gebröäken se et vöär alle jager-sammeldergrupen in südelik Afrika en slöög vöäral up de leavenswyse en nit up volksafkoamst. ''Khoekhoen'' hevt an de andere kante wal ne etniske bedüding en slöt up een antal grupen dee nauw verwante språken küürt. See leidet een bestån van [[herders]] in de Süüdafrikaanske [[Kaapstreake]] en Namibie, wår as de Khoekhoevolker [[Nama (volk)|Nama]] en [[Damara (volk)|Damara]] leavt.
+Van de Sān wördt vake dacht dat se jager-sammelders sint in de [[kalahariwööste]] en deylen van [[Botswana]], [[Namibie]], [[Angola]], [[Zambia]], [[Zimbabwe]], [[Lesotho]] en [[Süüdafrika]]. Et woord ''sān'' kümt uut et Khoekhoe en bedüdet enkel sammelders ("dee wat saken van de grund upkryget") dee gin vey holdet. So gebröäken se et vöär alle jager-sammeldergrupen in südelik Afrika en slöög vöäral up de leavenswyse en nit up volksafkoamst. ''Khoekhoen'' hevt an de andere kante wal ne etniske bedüding en slöt up een antal grupen dee nauw verwante språken küürt. See leidet een bestån van [[herders]] in de Süüdafrikaanske [[Kaapstreake]] en Namibie, wår as de Khoekhoevolker [[Nama (volk)|Nama]] en [[Damara (volk)|Damara]] leavt.
 
 De Khoekhoestreaken en Sān wordt under de term Khoisan evöngen. See sint de volker van vöär de vermeynde [[Bantu-trek]], ungeveyr tüsken 1500 2000 jår terügge.
 
