--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -43,6 +43,13 @@ In de Latere Steyntyd, vanaf 75 dusend jår, hadden de vöärölderlike khoisani
 
 De [[sangoakultuur]] uut de latere steyntyd beslöäg südelik Afrika in deylen wår as jårliksen neaderslag minder is as ne meter.<ref>Lee, Richard B. (1976), "Kalahari Hunter-Gatherers: Studies of the !Khoi San and Their Neighbors." Richard B. Lee en Irven DeVore, eds. Cambridge: Harvard University Press</ref> Et lyf van de hüdige Khoisanvolker lykt stark up de olde sangoaanske beynder.
 
+===Bantu-trek===
+Do as de [[Bantu (volk)|bantu]] ungeveyr 1500 jår terügge up et süden antröäken, nöämen se een antal klikgelüden en wöörde oaver van de Khoisan. Dee sint vandage noch te höyren in et [[Xhosa (språke)|Xhosa]] en [[Zulu (språke)|Zulu]]. De Bantuvolker sullen südelik Afrika teagen de [[6e eeuw|6. eywe]] nå Kristus bereiked hebben. De Bantus nöämen voordan meyr land in van de Khoikhoi, wårdöär dee richting de dröygere deylen van de [[Kalahari]] drüngen wörden.
+
+Döärdat se [[skåp|sköäpe]], [[sik|sikken]] en ander vey hölden in de vrüchtbåre dalen in dee streake, hadden se good te eaten. Dårdöär kunden se ouk in gröätere grupen leaven en de steade inneamen van de [[San (volk)|San]], dee et musten hebben van jagen en versamelen. De Bantus, dee wyder warren med burenbedryv en metaalbewarking, groiden härder as de Khoisan en wörden de oaverheyrskende grup in süüdoustelik Afrika, vöärdat neaderlandske [[kolonialisme|kolonisten]] der in [[1652]] an land köämen.<ref>Diamond, 394–7.</ref>
+
+Nå den intrek van de Bantus bleaven de Khoisan vöäral westelik van de [[Groute Viskerivyr]] in [[Süüdafrika]] en wöösten rundum, wår as et dröygere klimaat ungeschikt was vöär de gewassen van de Bantuburen.
+
 ==Språken==
 
 ==Genetiske en lyflike kenmarken==
