--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -50,6 +50,30 @@ Döärdat se [[skåp|sköäpe]], [[sik|sikken]] en ander vey hölden in de vrüc
 
 Nå den intrek van de bantus bleaven de khoisan vöäral westelik van de [[Groute Viskerivyr]] in [[Süüdafrika]] en wöösten rundum, wår as et dröygere klimaat ungeschikt was vöär de gewassen van de bantuburen.
 
+===Moderne tyd===
+De khoikhoi wordet vöär et eyrste nöömd nå kuntakt med [[Portugal|portugeyske]] verkenners, ungeveyr dusend jår nådat se döär de bantus verdrüngen sint. De europeanen brachten de [[pokken]], wår de khoikoi gin verwear teagen hadden. Öäre antallen daalden. De khoikhoi völlen vaker europeanen an do as de [[VOC]] de olde graslanden vöär öäre buurderyen ümslöäten. De sociale samenhang van de khoikhoi wör slim beskadigd en uuteandelik vernetigd döär de koloniale uutbreiding vanaf de [[17e eeuw|17. eywe]]. Do as familybände uut mekander völlen, güngen meyr en meyr khoikhoi up buurderyen woanen as deensthöyrigen of as knecht. Anderen wörden upnöämen in bestånde stamverbanden van de [[Xhosa (volk)|xhosa]]. Georg Schmidt, nen [[Christendom|kristeliken]] sendingswarker uut [[Herrnhut]] in et oustdüütske [[Sachsen|Sassen]] stichteden in [[1738]] et dorp [[Genadendal]], den eyrsten sendingspost in südelik Afrika<ref>''The Pear Tree Blossoms'', Bernhard Krueger, Hamburg, Germany</ref> tüsken de khoi in Baviaansklouv in de [[Rivyrsunderend-bargen]]. De eyrste europeyske kolonisten trouwden mangs med khoikhoi-vrouwlüde, wåruut ne beste grup van halvbloodlüde untstünd, ouk bekend as de [[Grykwa (volk)|grykwa]].
+
+[[Andries Stockenström]] begün ne khoi-neadersetting 'Katrivyr' by de oustelike grense van de Kaapkolony. De neadersettingen deaden et heyl best en groiden. Katrivyr was al rap ne slaagde streake dee min of meyr unafhanglik bestünd. De lüde warren anvanglik meyst [[Afrikaans]]-spreakende Gonaqua-Khoi, mär de neadersetting tröäk al rap andere khoi, Xhosa en halvblöödte an.
+
+De [[büskesmanoorlöge]] warren vöärnamelik een teagenbeweaging van de san up öäre landunteygening.
+
+Teagen et begin van de [[18e eeuw|18. eywe]] leavden de khoikhoi in de westkaap readelik samenwarkend med de neaderlanders. Teagen et ende van de eywe, warkeden de meyste khoisan as 'arbeiders', nit heyl verskillend van slaven. Wo wydter de arbeider van [[Kaapstad]] was, wo lastiger et was üm ougst en burenupbrengsten når de markten te krygen. Döär weidevergönningen up et noorden van de [[Bargrivyr]] köäm de kolonialisering good up gang. Döär disse ''ruilverkaveling'' rakeden de khoijou land en vey kwyt, nöäst sociale, ekonomiske en politike untwikkeling.<ref>Wilmot Godfrey James, Mary Simons. Transaction Publishers, New Brunswick, New Jersey.Class, Caste, and Color: A Social and Economic History of the South African Western Cape. mei 2018. Bls. 1–10.</ref>
+
+do as de xhosa-upstand in [[1853]] dalehöwwen was, wul de nye regeyring in de Kaap de khoi politike rechten geaven üm rassenstryd in de tokumst teagen te gån. De regeyring köäm med de [[Kaapske Franchise]] in [[1853]], wårmed alle männelike inwoaners med minimaal besit, maakt nit uut wat vöär klöär, stemrecht hadden en verkeesbår vöär et parlement kunden weasen. Disse raslouse regel wör afskaffed döär et apartheidsregime.<ref>[http://hsf.org.za/resource-centre/hsf-briefs/a-long-walk-to-universal-franchise-in-south-africa-1 HSF.org.za. "A Long Walk To Universal Franchise in South Africa". Fraser, Ashleigh. skreaven up 3 juni 2013. Bekeaken up 7 April 2015.]</ref>
+
+By de [[volkermoord van Herero en Namaqua]] in et [[Düütsk Süüdwestafrika]] wörden 10.000 [[Nama (volk)|Nama]] vermoord tüsken 1904 en 1907.<ref>Sarkin-Hughes, Jeremy. (2008) ''Colonial Genocide and Reparations Claims in the 21st Century: The Socio-Legal Context of Claims under International Law by the Herero against Germany for Genocide in Namibia, 1904–1908'', p. 142, Praeger Security International, Westport, Conn. ISBN 978-0-313-36256-9.</ref>
+
+De san van de Kalahari wörden beskreaven in ''Specimens of Bushman Folklore'' (Vöärbealden van büskesman-volksverhalen) döär Wilhelm Bleek en Lucy Lloyd (1911). Döär den afrikaner skryver [[Laurens van der Post]] wörden se in de jåren '50 by een gröäter publik bekend, in ne sesdeylige filmdokumentaire. In et [[Centrale Kalahari Wildreservaat]] van Botswana, wat in [[1961]] stichted wör, möchten de san öäre traditionele leavenswyse blyven volgen. Töt de jåren '90, do as de regeyring van Botswana de inwoaners van de Kalahari buten et reservaat begün te setten. In [[2002]] stoppeden se ouk med deenste leyveren an de inwoaners. Dårup begün nen juridisken stryd, wårnå in [[2006]] et höygere rechtshov van Botswana oordeylden dat de inwoaners unvrywillig en ungrundwettelik uut et reservaat verdreyven warren. Toch bleaven se de san verhüsen, wårup in [[2012]] de Basarwastam een uproup an de Vereanigde Natys deade üm de regeyring te dwingen öäre rechten te achten.
+
+Vanaf de afskaffing van [[Apartheid]] in [[1994]] gebruket de khoisan de term ''khoisan'' vaker üm sikselv van de bantumeyrderheid te underskeiden as de "eyrste inwoaners". In [[1997]] höld de [[Universiteit van Westkaap]] ne konferenty oaver "Khoisan-identiteiten en kultureel arvgood".<ref>[http://www.khoisanpeoples.org/indepth/ind-identity.htm Kalahari Peoples Fund. "Khwe, Basarwa, or Bushmen? Terminology, Identity, and Empowerment in Southern Africa".Hitchcock, Robert. Biesele, Megan. Bekeaken up 15 january 2014.</ref> Vanaf 2015 wördt der voordan vaker spröäken oaver khoisanaktivisme.
+
+De süüdafrikaanske regeyring löät khoisanfamilys (töt 1998) land terügneamen wat se vöär 1913 ouk hadden. Mär den underdirektöör vöär landterügvråg, Thami Mdontswa, segt dat der eyrst ne grundwetswysiging müt koamen as de khoisan noch meyr land van vöär 9 juni 1913 wilt terügvrågen.<ref>http://www.sabc.co.za/news/a/8a103b004178fb09b0aaffb1c784b7fa/Possible-constitution-changes-for-Khoisan-land-claims SABC News. "Possible constitution changes for Khoisan land claims". Mercedes Besent. woonsdag 16 oktober 2013.]</ref>
+
+<gallery widths="200px" heights="200px">
+Image:Sameul Daniell - Khoisan besig om sprinkane te braai - 1804.jpg|"Büskesmänne an et sprinkhanen bråden", skilderye van [[Samuel Daniell]] (1805).
+File:In Search of the San 08.jpg|Sanvrouwe in Namibie (foto uut 1984)
+</gallery>
+
 ==Språken==
 
 ==Genetiske en lyflike kenmarken==
