--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -75,6 +75,20 @@ File:In Search of the San 08.jpg|Sanvrouwe in Namibie (foto uut 1984)
 </gallery>
 
 ==Språken==
+[[Image:African language families en.svg|thumb|upright|Gröön: Hüdigendaagse spreiding van [[Khoisanspråken]] van de khoi en san, plus et [[Sandawe (språke)|sandawe]] en [[Hadza (språke)|Hadza]] uut Tanzania.]]
+
+In [[1955]] stelden [[Joseph Greenberg de khoisanspråken as samenhangende grup vöär.<ref>Greenberg, Joseph H. 1955. "Studies in African Linguistic Classification"  New Haven: Compass Publishing Company. (herdrükken, med kleine verbeateringen, ne rygel van acht artikelen in de "Southwestern Journal of Anthropology" tüsken 1949 en 1954.)</ref> öäre genetiske relaty wör later in de 20. eywe betwyfeld. De term wördt nu vake vöär et gemak gebruked üm genetiske eynheid te umseilen, ungeveyr so as "[[Papua-språken|papua]]" en "[[australiske språken]]".<ref>Bonny Sands (1998). ''Eastern and Southern African Khoisan: Evaluating Claims of Distant Linguistic Relationships''. Rüdiger Köppe Verlag, Cologne.</ref> et belangrykste verbindende kenmark is öäre klikgelüden.
+
+Meysttyds wordet se in twey språkfamilys indeyld, med dårnöäst een paar möägelike språkeilanden.
+
+De[[Kx'a (språke)|Kx'a]]-family wör vöärsteld in 2010, wårin de [[ǂ’Amkoe (språke)|ǂ’Amkoe]] (ǂHoan) språke med de [[!Kung (språke)|ǃKung (Juu)]] dialekt een grup förmet. !Kung besteyt uut ungeveyr een dosyn dialekte, sunder düdelike afbakening der tüsken. Sands et al. (2010) stelt ne verdeyling in veer grupen vöär:
+
+* [[Sekele|Noordelik !Kung (Sekele)]], spröäken in Angola by de [[Cunene]]-, [[Cubango]]-, [[Cuito]]- en [[Cuando]]-rivyren (mär rechtevoord med vöäle vlüchtelingen in Namibie),
+* [[Ekoka !Kung|Noordcentraal !Kung (Ekoka)]], in Namibie tüsken de Ovamborivyr en de angoleyske grense,
+* [[Centraal !Kung]], rund [[Grootfontein]] in Namibië, up et westen van de centrale Omatakorivyr en up et süden van de Ovambo
+* [[Juǀ'hoan|Süüdoustelik !Kung (Juǀ'hoan)]], in Botswana up et ousten van et [[Okavangodelta]] en noordoust-Namibie vanaf [[Windhook]] tot [[Rundu]], [[Gobabis]] en de [[Caprivistreppel]].<ref>Sands, Bonny (2010). Brenzinger, Matthias; König, Christa, eds. "Juu Subgroups Based on Phonological Patterns". Khoisian Language and Linguistics: the Riezlern Symposium 2003. Cologne, Germany: Rüdiger Köppe: 85–114.</ref>
+
+De khoi- of khoespråkfamily wördt underverdeyld in Khoikhoi ([[Khoekhoe]] en [[Khoemana]]-dialekte) en ne Kalahari-tak (Tshu–Khwe). Under de Kalahari-tak valt et [[Shua (språke)|shua]] en et [[Tsoa (språke)|tsoa]] (med dialekte ), en [[Kxoe (språke)|Kxoe]], [[Naro (språke)|Naro]], [[Gǁana (språke)|Gǁana]] and [[ǂHaba (språke)|ǂHaba]] (med dialekte). Khoe wördt ouk wal es up eyne lyne sat med et [[Kwadi (språke)|Kwadi]] ("Kwadi–Khoe") en med minder seakerheid ouk med et [[Sandawe (språke)|sandawe]]  van [[Tanzania]] ("Khoe–Sandawe"). Ouk de tanzaniaanske [[Hadza (språke)|hadzaspråke]] wördt ouk as khoisanspråke seen ümdat et klikgelüden hevt.
 
 ==Genetiske en lyflike kenmarken==
 
