--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -77,7 +77,7 @@ File:In Search of the San 08.jpg|Sanvrouwe in Namibie (foto uut 1984)
 ==Språken==
 [[Image:African language families en.svg|thumb|upright|Gröön: Hüdigendaagse spreiding van [[Khoisanspråken]] van de khoi en san, plus et [[Sandawe (språke)|sandawe]] en [[Hadza (språke)|Hadza]] uut Tanzania.]]
 
-In [[1955]] stelden [[Joseph Greenberg de khoisanspråken as samenhangende grup vöär.<ref>Greenberg, Joseph H. 1955. "Studies in African Linguistic Classification"  New Haven: Compass Publishing Company. (herdrükken, med kleine verbeateringen, ne rygel van acht artikelen in de "Southwestern Journal of Anthropology" tüsken 1949 en 1954.)</ref> öäre genetiske relaty wör later in de 20. eywe betwyfeld. De term wördt nu vake vöär et gemak gebruked üm genetiske eynheid te umseilen, ungeveyr so as "[[Papua-språken|papua]]" en "[[australiske språken]]".<ref>Bonny Sands (1998). ''Eastern and Southern African Khoisan: Evaluating Claims of Distant Linguistic Relationships''. Rüdiger Köppe Verlag, Cologne.</ref> et belangrykste verbindende kenmark is öäre klikgelüden.
+In [[1955]] stelden [[Joseph Greenberg]] de khoisanspråken as samenhangende grup vöär.<ref>Greenberg, Joseph H. 1955. "Studies in African Linguistic Classification"  New Haven: Compass Publishing Company. (herdrükken, med kleine verbeateringen, ne rygel van acht artikelen in de "Southwestern Journal of Anthropology" tüsken 1949 en 1954.)</ref> öäre genetiske relaty wör later in de 20. eywe betwyfeld. De term wördt nu vake vöär et gemak gebruked üm genetiske eynheid te umseilen, ungeveyr so as "[[Papua-språken|papua]]" en "[[australiske språken]]".<ref>Bonny Sands (1998). ''Eastern and Southern African Khoisan: Evaluating Claims of Distant Linguistic Relationships''. Rüdiger Köppe Verlag, Cologne.</ref> et belangrykste verbindende kenmark is öäre klikgelüden.
 
 Meysttyds wordet se in twey språkfamilys indeyld, med dårnöäst een paar möägelike språkeilanden.
 
