/* Genetiske en lyflike kenmarken */  - MYN 750. ARTIKEL

--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -91,8 +91,11 @@ De[[Kx'a (språke)|Kx'a]]-family wör vöärsteld in 2010, wårin de [[ǂ’Amko
 De khoi- of khoespråkfamily wördt underverdeyld in Khoikhoi ([[Khoekhoe]] en [[Khoemana]]-dialekte) en ne Kalahari-tak (Tshu–Khwe). Under de Kalahari-tak valt et [[Shua (språke)|shua]] en et [[Tsoa (språke)|tsoa]] (med dialekte ), en [[Kxoe (språke)|Kxoe]], [[Naro (språke)|Naro]], [[Gǁana (språke)|Gǁana]] and [[ǂHaba (språke)|ǂHaba]] (med dialekte). Khoe wördt ouk wal es up eyne lyne sat med et [[Kwadi (språke)|Kwadi]] ("Kwadi–Khoe") en med minder seakerheid ouk med et [[Sandawe (språke)|sandawe]]  van [[Tanzania]] ("Khoe–Sandawe"). Ouk de tanzaniaanske [[Hadza (språke)|hadzaspråke]] wördt ouk as khoisanspråke seen ümdat et klikgelüden hevt.
 
 ==Genetiske en lyflike kenmarken==
+[[Image:Hotentoci-zOrgelbranda.jpg|thumb|upright=0.6|Teakening van ne Khoikhoi-vrouwe en nen kearl. De vrouwe hevt [[steatopygia]] (teakening uut 1900).]]
 
-{{WIU}}
+[[Charles Darwin]] skreav in ''The Descent of Man'' in [[1882]] oaver de khoisan. Hee skreav dat öäre [[steatopygia]] [[evoluty|evolueerden]] döär seksuele köäse en dat "et achterste deyl van et lyf up prachtige wyse uutsteakt".<ref> [http://darwin-online.org.uk/content/frameset?itemID=F955&viewtype=text&pageseq=1 Darwin, Charles. "The Descent of Man and Selection in Relation to Sex". London, John Murray, 1882. Bls 578.</ref>
+
+In jåren '90 bleak uut genoomundersöök når wearldbevolking dat et [[Y-chromosoom]] van Sankearls bepålde [[Polymorfisme (biology)|polymorfiske]] patronen hevt dee anders sint as van alle andere volker.<ref>[=http://news.sciencemag.org/africa/2014/12/dwindling-african-tribe-may-have-been-most-populous-group-planet sciencemag.com. "Dwindling African tribe may have been most populous group on planet".]}</ref> Ümdat et Y-chromosoom van geslacht up geslacht good bewård blivt, wördt dit soort DNA vake gebruked üm te bepålen woneyr as verskillende undergrupen van mekander lösrakeden. Et is med andere wöörde ne gode anwysing vöär de lätste deylde vöärolder. De undersökers bewäärden dat de san sik as eyne van de eyrste menskengrupen afsplitsden van de meyst recente deylde vöärolder van alle lüde up de wearld.<ref>[http://www.nature.com/nature/journal/v463/n7283/full/nature08795.html schuster, SC. et al (2010). "Complete Khoisan and Bantu genomes from Southern Africa". Nature. vol 463, is 7283. DOI 10.1038/nature08795. Bls. 943–947.</ref><ref>[http://news.nationalgeographic.com/news/2002/12/1212_021213_journeyofman.html Nationalgeographic.com. "Documentary Redraws Humans' Family Tree".Mayell, Hillary. December 2002]</ref> 
 
 
 [[Kategorie: Tweants artikel]]
