--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -1,17 +1,17 @@
 '''Khoisan''' ({{IPA|ˈkɔɪsan}}), of volgens de hüdige [[khoekhoegowab]]-skryvwyse '''Khoe-Sān''' (uutspreaken as [kxʰoesaːn]), is ne sammelnaam vöär de inheymske lüde in et süden van [[Afrika]]. Dåründer valt de [[Khoekhoen]] en de [[San (volk)|San]]. Se wordet ouk wal es ''büskesmänne'' nöömd ([[afrikaansk]]: ''Boesmans'' en [[engels]]: ''Bushmen'',<ref>Den antropoloug Henry Harpending van de Universiteit van Utah, den as med de beroomde klik-spreakende [[jager-verzamelaars|jager-sammelders]] woaned hevt, segt: "In the jåren '70 spreidden sik de name ''San'' in Europa en Amerika ümdat et politik korrekt leak, terwyl as ''büskesmänne'' neaderbügend en seksistisk klünk. De jager-sammelders hadden selv nooit ne name vöär sikselv, in gin enkele van de språken dee se spreaket. ''San'' was jüüst et beleydigende woord dee de Khoi (een herdersvolk) vöär de büskesmänne gebröäken. [...] Y mosten ymand gin ''San'' nömen wår as hee by was. Ik bleav gewoon büskesmänne gebruken en wör döär de polikorbrigade terügge floited. [...]" [http://www.upi.com/Odd_News/2002/06/20/Feature-Name-game-Inuit-or-Eskimo/UPI-43191024597290/ Sailer, Steve. "Name game – ‘Inuit’ or ‘Eskimo’?  Bekeaken up 12 January 2014.] 20 June 2002</ref> når et [[nederlaands|neaderlandsk]]e ''bosjesman'' en ''Saake'' in et [[Nǁng (sproake)|Nǁng]]).
 
-Med name de Khoekhoen warren eyrder bekend as ''hottentotten'', ne [[onomatopee]] uut et neaderlandske ''hot-en-tot'' vöär de [[klikkonsonanten|klikgelüden]] dee in de Khoekhoespråken vöärkoamet. By öäre vroge kolonisaty van de Kaap gavven de neaderlanders de Khoekhoen drank üm se uut te lokken nen rituelen dans up te voren. De tekst by de dans klüng vöär neaderlanders as "hot-en-tot".
+Med name de khoekhoen warren eyrder bekend as ''hottentotten'', ne [[onomatopee]] uut et neaderlandske ''hot-en-tot'' vöär de [[klikkonsonanten|klikgelüden]] dee in de Khoekhoespråken vöärkoamet. By öäre vroge [[kolonialisme|kolonisaty]] van de Kaap gavven de neaderlanders de khoekhoen drank üm se uut te lokken nen rituelen dans up te voren. De tekst by de dans klüng vöär neaderlanders as "hot-en-tot".
 
-Van de Sān wördt vake dacht dat se jager-sammelders sint in de [[kalahariwööste]] en deylen van [[Botswana]], [[Namibie]], [[Angola]], [[Zambia]], [[Zimbabwe]], [[Lesotho]] en [[Süüdafrika]]. Et woord ''sān'' kümt uut et Khoekhoe en bedüdet enkel sammelders ("dee wat saken van de grund upkryget") dee gin vey holdet. So gebröäken se et vöär alle jager-sammeldergrupen in südelik Afrika en slöög vöäral up de leavenswyse en nit up volksafkoamst. ''Khoekhoen'' hevt an de andere kante wal ne etniske bedüding en slöt up een antal grupen dee nauw verwante språken küürt. See leidet een bestån van [[herders]] in de Süüdafrikaanske [[Kaapstreake]] en Namibie, wår as de Khoekhoevolker [[Nama (volk)|Nama]] en [[Damara (volk)|Damara]] leavt.
+Van de Sān wördt vake dacht dat se jager-sammelders sint in de [[kalahariwööste]] en deylen van [[Botswana]], [[Namibie]], [[Angola]], [[Zambia]], [[Zimbabwe]], [[Lesotho]] en [[Süüdafrika]]. Et woord ''sān'' kümt uut et khoekhoe en bedüdet enkel sammelders ("dee wat saken van de grund upkryget") dee gin vey holdet. So gebröäken se et vöär alle jager-sammeldergrupen in südelik Afrika en slöög vöäral up de leavenswyse en nit up volksafkoamst. ''Khoekhoen'' hevt an de andere kante wal ne etniske bedüding en slöt up een antal grupen dee nauw verwante språken küürt. See leidet een bestån van [[herders]] in de Süüdafrikaanske [[Kaapstreake]] en Namibie, wår as de khoekhoevolker [[Nama (volk)|nama]] en [[Damara (volk)|damara]] leavt.
 
-De Khoekhoestreaken en Sān wordt under de term Khoisan evöngen. See sint de volker van vöär de vermeynde [[Bantu-trek]], ungeveyr tüsken 1500 2000 jår terügge.
+De khoekhoestreaken en sān wordt under de term khoisan evöngen. See sint de volker van vöär de vermeynde [[bantu-trek]], ungeveyr 1500 töt 2000 jår terügge.
 
-Vöäle Khoesānvolker sint rechtstreykse afstammelingen van ne vroge verspreiding van de moderne menske når südelik Afrika, vöär 150.000 jår eleaden. Öare [[Khoisanspråken|språken]] hebt een antal typologiske oavereynkoamsten, mär dat geyt vöäral um de [[klikkonsonanten]]. Se sint nit terügge te leiden töt eyne deylde vöärolderspråke. Rechtevoord gevt et teminste drey språkfamilys: ([[Khoe-Kwadi]], [[!Ui-Taa]] en [[Kx'a]]). Geleyrden hebt bewäärd dat de Khoekhoeǁaen (Khoekhoevolker) in de latere [[Steyntyd]] når südelik Afrika henkoamen sint en möägelikerwys oavernöämen döär Bantuvolker.<ref>Barnard, Alan (1992). "Hunters and Herders of Southern Africa: A comparative ethnography of the Khoisan peoples." Cambridge University Press, New York, NY; Cambridge, UK.</ref>
+Vöäle khoesānvolker sint rechtstreykse afstammelingen van ne vroge verspreiding van de moderne menske når südelik Afrika, vöär 150.000 jår eleaden. Öare [[Khoisanspråken|språken]] hebt een antal typologiske oavereynkoamsten, mär dat geyt vöäral um de [[klikkonsonanten]]. Se sint nit terügge te leiden töt eyne deylde vöärolderspråke. Rechtevoord gevt et teminste drey språkfamilys: ([[khoe-kwadi]], [[!ui-taa]] en [[kx'a]]). Geleyrden hebt bewäärd dat de khoekhoeǁaen (khoekhoevolker) in de latere [[Steyntyd]] når südelik Afrika henkoamen sint en möägelikerwys oavernöämen döär bantuvolker.<ref>Barnard, Alan (1992). "Hunters and Herders of Southern Africa: A comparative ethnography of the Khoisan peoples." Cambridge University Press, New York, NY; Cambridge, UK.</ref>
 
 ==Naam==
-De samenstelde naam ''Khoisan'' is ne hüdige antropologiske vinding dee vanaf begin van de [[20e eeuw|20e eywe]] in bruuk rakeden. ''Khoisan'' wör vöärsteld döär Leonhard Schulze in de jåren '20 en wyder verbreided döÄr [[Isaac Schapera]].<ref>Schapera, Isaac. "The Khoisan peoples of South Africa: Bushmen and Hottentots." Routledge, 1930.</ref> Vanaf de jåren '60 raket et wyder in gebruuk, vöärnamelik döärdat [[Joseph Greenberg]] de språkfamily van Khoisanspråken vöärstelden.
+De samenstelde naam ''Khoisan'' is ne hüdige antropologiske vinding dee vanaf begin van de [[20e eeuw|20e eywe]] in bruuk rakeden. ''Khoisan'' wör vöärsteld döär Leonhard Schulze in de jåren '20 en wyder verbreided döÄr [[Isaac Schapera]].<ref>Schapera, Isaac. "The Khoisan peoples of South Africa: Bushmen and Hottentots." Routledge, 1930.</ref> Vanaf de jåren '60 raket et wyder in gebruuk, vöärnamelik döärdat [[Joseph Greenberg]] de språkfamily van khoisanspråken vöärstelden.
 
-De Khoesān wörden in et verleaden ouk andüded as were '''Kaapswarten''' of '''Westkaapswarten''' üm se te underskeiden van Bantu- en [[Kongo]]-lüde, dee vake ne [[Niger-Kongospråken|Niger-Kongospråke]] küürden. 
+De khoesān wörden in et verleaden ouk andüded as were '''Kaapswarten''' of '''Westkaapswarten''' üm se te underskeiden van Bantu- en [[Kongo]]-lüde, dee vake ne [[Niger-Kongospråken|Niger-Kongospråke]] küürden. 
 
 De term ''Khoisan'' (ouk wal skreaven as ''KhoiSan'', ''Khoi-San'', ''Khoe-San''<ref>Skryvwysen med streypken, ''Khoe-San'' of ''Khoi-San'', sint van nå [[1990]]. Dit verskilt van de naam vöär San dee ne khoespråke küürt, by vöärbeald de "de Ai-San, Kun-San, Au-ai-san, An-San, Matsana-Khoi-San en de büskesmänne van Otave" in 
 John Noble, ''Illustrated Official Handbook of the Cape and South Africa'' (1893),  p. 395.
