--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -29,7 +29,7 @@ Dacht wördt dat de vöärolden van de hüdige khoisan 150.000 jår terügge al 
 Döärdat se so vroo al uutbreidden en uut mekander güngen, warren de Khoisan tüsken 150.000 en 70.000 jår eleaden de längste tyd up de moderne menskelike tydlyne de gröätste grup mensken, töt dat se vanaf dee tyd so händig an [[Eurasie]] intröäken.<ref>[http://www.nature.com/ncomms/2014/141204/ncomms6692/full/ncomms6692.html 
 Kim, Hie Lim, et al. "Khoisan hunter-gatherers have been the largest population throughout most of modern-human demographic history." [[Nature Communications]], 4 December 2014. Vol. 5. p 5692.]</ref> Se warren vöäle wydverbreider as nu. Öär terügloup in antallen hevt vöäral te maken med de [[Bantu-trek]]. Se woaneden verspreid oaver südelik en süüdoustelik Afrika. Ouk was der ne anmarkelike terügtrek van L0-draegers når oustelik Afrika tüsken 120.000 en 75.000 jår terügge. Rito et al. (2013) meynt dat dårdöär meskeen wal de groute uuttocht uut Afrika van 70.000 jår terügge up gang köäm.<ref>Rito, Teresa. Et al. "The First Modern Human Dispersals across Africa". PLoS ONE, 13 November 2013. vol. 8, is. 11. Blz e80031.</ref>
 
-"teagen 130.000 jår eleaden leavden twey verskillende grupen moderne mensken nöäst mekander in Afrika: breyd enöämen de hüdige Khoe- en San-volker in et süden en ne tweyde meyr midden-oustelik afrikaanske grup, dee de vöärolders sint van de meyste andere volker up de wearld. Vroge moderne verspreiding van de menske kümt oavereyne med klimaatveranderingen, med name de tropiske afrikaanske 'megadröygtes' van MIS 5 (marine-isotoop nivo 5, 130k-75k jår terügge. Tegenstrydig genog kan dat sorgd hebben vöär verspreiding når Midden- en Oustafrika en de dårupvolgende uuttocht uut Afrika van lüde med haplogrup L3, ungeveyr 60.000 jår terügge. Binnen haplogrup L0 sint twey süüd-når-oustmigratys te seen. Den eyrsten tüsken 120 en 75 dusend jår terügge löt de eyrste langeafstandsmigraty van mensen seen langs mtDNA en kan de verspreiding van verskillende kenmarken van de moderne menske in gang hebben esat. Ne tweyde, binnen de lätste 20 dusend jår vöär Ld, kan sorgd hebben vöär de spreid van klikspråken in Oustafrika, in teagenstelling töt de eyrdere oavertüging dat de oustelike vöärbealden oaverblyvsels sint van ne öldere, breydere verspreiding."
+"teagen 130.000 jår eleaden leavden twey verskillende grupen moderne mensken nöäst mekander in Afrika: breyd enöämen de hüdige Khoe- en San-volker in et süden en ne tweyde meyr midden-oustelik afrikaanske grup, dee de vöärolders sint van de meyste andere volker up de wearld. Vroge moderne verspreiding van de menske kümt oavereyne med klimaatveranderingen, med name de tropiske afrikaanske 'megadröygtes' van MIS 5 (marine-isotoop nivo 5), 130k-75k jår terügge. Tegenstrydig genog kan dat sorgd hebben vöär verspreiding når Midden- en Oustafrika en de dårupvolgende uuttocht uut Afrika van lüde med haplogrup L3, ungeveyr 60.000 jår terügge. Binnen haplogrup L0 sint twey süüd-når-oustmigratys te seen. Den eyrsten tüsken 120 en 75 dusend jår terügge löt de eyrste langeafstandsmigraty van mensen seen langs mtDNA en kan de verspreiding van verskillende kenmarken van de moderne menske in gang hebben esat. Ne tweyde, binnen de lätste 20 dusend jår vöär Ld, kan sorgd hebben vöär de spreid van klikspråken in Oustafrika, in teagenstelling töt de eyrdere oavertüging dat de oustelike vöärbealden oaverblyvsels sint van ne öldere, breydere verspreiding."
 
 [[File:Carleton Coon races after Pleistocene.PNG|thumb|upright=1.2| Skatte verspreiding van Kaapoiden in de middelste Steyntyd teagen et ende van et Pleistoceen (12.000 jår terügge) weadergeaven in roudpaersk (volgens [[Carleton S. Coon]] 1963).]]
 
