--- a/Khoisan_(volk).mw
+++ b/Khoisan_(volk).mw
@@ -37,7 +37,7 @@ Kim, Hie Lim, et al. "Khoisan hunter-gatherers have been the largest population 
 Moore, Ruth ''Evolution'' (Life Nature Library) New York:1962 Time, Inc. Höyvdstük 8: "The Emergence of Modern ''Homo sapiens''" blz. 173-- Eyrste bladsyde van afbealdingendeyl "Man and His Genes": et ''Kaapoide'' ras wördt eyne van de vyv groute menskenrassen nöömd, nöäst et ''[[Mongoloide ras|Mongoloide]]'', ''[[Kongoide]]'', ''[[Caucasisk]]'' en ''[[Australisk]]'' (med afbealdingen van een 'typisk persoon' vöär yder ras)</ref> Coon (1962) wul de term ''Negroide'' afskaffen en de lüde van under de [[Sahara]] uut [[Westafrika]] musten Kongoide nöömd worden. Cavalli-Sforza et al (1994) köämen med de naam ''khoisanide''.<ref>Cavalli-Sforza, L. Luca; Menozzi, Paolo; and Piazza Alberto. ''The History and Geography of Human Genes''. Princeton, New Jersey: 1994. Princeton University Press "Khoisanids" bls. 174–177.</ref> Coon was nit den eyrsten den as upmarkeden dat de Khoisan der anders uutsaggen as de westafrikaansen. Al in [[1684]] markeden [[François Bernier]] et up. Buten de vyv eyrder nöömde rassen stelden hee vöär üm noch meyr indeylingen up te neamen, vöäral vöär de "Swarten van Kaap van Gode Hoape" (''Les Noirs du Cap de bonne Esperance''). Hee vünd dat dee upmarkelik anders ebouwd warren as andere grupen under de Sahara.<ref>Anonymous [F. Bernier], [http://gallica.bnf.fr/ark:/12148/bpt6k56535g/f135.item "Nouvelle division de la terre par les différentes espèces ou races qui l'habitent"], ''Journal des Sçavants'', 24 April 1684, [[:File:Nouvelle division de la terre, par les différentes espèces ou races d'homme qui l'habitent.png|p. 133]]&ndash;140. '' les  Noirs du Cap de bonne Esperance semblent estre d'une autre espece que ceux du reste de l'Afrique. '' (p. 136). Seet ouk Charles Frankel, ''La science face au racisme'' (1986), [https://books.google.ch/books?id=szfsLo3VSVAC&pg=PA41  41f.]</ref>
 
 ===Latere Steyntyd===
-[[File:Schematic representation of the major inferred migrations involving mtDNA haplogroup L0.png|thumb|upright=1.2|Skema van de "uuttocht uut südelik Afrika"  van de post-eemiaanske Middelste töt Latere Steyntyd (vanaf 100.000 jår terügge), afleided van mtDNA haplogrup L0 in hüdige afrikaanske volker (Rito et al. 2013).<ref name=Rito2013/>]]
+[[File:Schematic representation of the major inferred migrations involving mtDNA haplogroup L0.png|thumb|upright=1.2|Skema van de "uuttocht uut südelik Afrika"  van de post-eemiaanske Middelste töt Latere Steyntyd (vanaf 100.000 jår terügge), afleided van mtDNA haplogrup L0 in hüdige afrikaanske volker (Rito et al. 2013).]]
 
 In de Latere Steyntyd, vanaf 75 dusend jår, hadden de vöärölderlike khoisanide lüde sik oaver et meyste van südelik en oustelik Afrika verspreid. Vanaf 20 dusen jår is der möägelik noch ne tweyde verspreidingsbeweaging te seen, up grund van de verspreiding van haplogrup L0d. Rosti et al. meynet dat der verband is tüsken disse 'jungere' verspreiding en de klikspråken in oustelik Afrika ([[Hadza (språke)|Hadza-språke]]).
 
