*Empty MediaWiki Message*

--- a/Videospel.mw
+++ b/Videospel.mw
@@ -1,6 +1,6 @@
 [[File:Pong (28684491143).jpg|thumb|Lüde dee up een grout skarm et videospelleke ''[[Pong]]'' spöälet in et [[National Videogame Museum]]]]
 
-Een '''videospel''' (vake andüüdt med et [[engels]]ke woord '''game''' üm et te underskeiden van nit-digitale spöllekes) is een elektronisk spel wårby nen spöäler uutwesseling angeyt med ne digitale umgeaving üm sichtbåre geböärtenissen te töynen up een twey- of dreydimensionaal weadergavemedium, so as een [[filmskarm]], [[virtuele warkelikheid|VR]]-höyvdstel of [[komputerskarm]]. Vanaf de jåren '80 sint videospellen een voordan belangryker deyl van de vermaakindustry ewörden. Of videospellen ouk ne ård van [[künst]] sint wördt noch vöäle bedisterd.
+Een '''videospel''' (vake andüüdt med et [[engels]]ke woord '''game''' üm et te underskeiden van nit-digitale spellekes) is een elektronisk spel wårby nen spöäler uutwesseling angeyt med ne digitale umgeaving üm sichtbåre geböärtenissen te töynen up een twey- of dreydimensionaal weadergavemedium, so as een [[filmskarm]], [[virtuele warkelikheid|VR]]-höyvdstel of [[komputerskarm]]. Vanaf de jåren '80 sint videospellen een voordan belangryker deyl van de vermaakindustry ewörden. Of videospellen ouk ne ård van [[künst]] sint wördt noch vöäle bedisterd.
 
 De elektroniske systemen üm videospellen up te spöälen sint [[komputerplatform]]s. Videospellekes wordet vake maked vöär eyn of meyrere platforms. Mangs sint se ouk weader nit vöär alle platforms te krygen. In de jåren '80 warren de so nöömde ''arcade games'' populair. Dat sint spöälkasten wårin as et spöl te spöälen is döär der geld in te drükken. Dårvan löäp et gebruuk terügge do as der platforms vöär in de huuskamers köämen, so as [[videospelkonsole]]s, [[laptop|(vold)komputers]] en later ouk [[smartphone|kloukfoon]]s.
 
