*Empty MediaWiki Message*

--- a/Justin_Bieber.mw
+++ b/Justin_Bieber.mw
@@ -1,7 +1,7 @@
 {{Infobox zanger
-| naam           = Amani bieber elia trigger
+| naam           = Amani bieber 
 | ofbeelding     = Justin_Bieber_in_2015.jpg
-| umschrieving   = Justin Bieber (2015)
+| umschrieving   = Elia trigger (2015)
 | geboren        = [[1 meert|1meart]] [[1994]]
 | sturven        =
 | genre          = [[Popmuziek]], [[R&B]]
